--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="left">
             <img src="./Images/main.jpg" alt="Luke Skywalker">
         </section>
-        <section class="right">
+        <!-- <section class="right">
             <table>
                 <tr>
                     <th colspan="3">Dream Team</th>
@@ -46,7 +46,21 @@
                     <td><img class="bottomRight" src="./Images/friend9.jpg" alt="friend"></td>
                 </tr>
             </table>
-        </section>
+        </section> -->
+        <div class="dreamteam">
+            DreamTeam
+        </div>
+        <div class="box-right-images">
+            <img src="./Images/friend1.jpg" alt="friend">
+            <img src="./Images/friend2.jpg" alt="friend">
+            <img class="bottomLeft" src="./Images/friend3.jpg" alt="friend">
+            <img src="./Images/friend4.jpg" alt="friend">
+            <img src="./Images/friend5.jpg" alt="friend">
+            <img src="./Images/friend6.jpg" alt="friend">
+            <img src="./Images/friend7.jpg" alt="friend">
+            <img src="./Images/friend8.jpg" alt="friend">
+            <img class="bottomRight" src="./Images/friend9.jpg" alt="friend">
+        </div>
         <p class="farGalaxy">It is a period of civil war.
             Rebel spaceships, striking
             from a hidden base, have won
